@@ -118,10 +118,16 @@ enum return_type disk_prepare(void)
 	char * choice;
 	int i;
 	enum return_type results;
+	static int already_probed_ide_generic = 0;
 
         int count = get_disks(&medias, &medias_models);
 
 	if (count == 0) {
+		if (!already_probed_ide_generic) {
+			already_probed_ide_generic = 1;
+			my_insmod("ide_generic", ANY_DRIVER_TYPE, NULL, 0);
+			return disk_prepare();
+		}
 		stg1_error_message("No DISK drive found.");
 		i = ask_insmod(MEDIA_ADAPTERS);
 		if (i == RETURN_BACK)
