@@ -1,3 +1,7 @@
+- add back ide-generic support (incorrectly removed in 1.17)
+  the module that we don't want is "ide-pci-generic" (previously "generic"),
+  and this is handled by ldetect-lst preferred modules list
+
 1.29:
 - allow to pass module options to probe-modules
 - build fixes for gcc 4.3
